# EventPipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/data/: dummy.parquet
.github/workflows/: eventprocessor.yml
cpp/EventPipeline/EventProcessor/: processor.cpp
cpp/EventProcessor/: processor.cpp
data/: generate_data.py
python/EventPipeline/EventProcessor/: processor.py
python/EventProcessor/: processor.py
python/common/: parquetComparison.py
scripts/: process_events.py
